# ipos-open-source-2026S1

./: SPECIFICATION.md  justfile  main.py  onboarding.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: Python-CI.yml  python-MCP-CI.yml
app/example_llm_client/: simulated_llm_client.py
app/mcp/mcp_prompts/: converter_prompts.py
app/mcp/mcp_resources/: converter_resources.py
app/mcp/mcp_tools/: miles_to_km.py
app/shared/: __init__.py  event_hook.py
app/utils/: get_principal.py  resource_utils.py
example_llm_client/: .env.example  requirements-dev.txt  simulated_llm_client.py
src/mcp_resources/: converter_resources.py
src/mcp_tools/: miles_to_km.py
tests/: test_event_hook.py
tests/mcp/: conftest.py  test_errors.py  test_explain_prompt.py  test_health.py  test_lifecycle.py  test_prompts.py  test_resources.py  test_streaming.py  test_tools.py  test_usage_prompt.py
utils/: get_principal.py
