[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ipos-open-source-2026S1"
version = "0.0.2"
description = "a fastapi application to handle ai agent and mcp interactions workflow's in a reusable and scalable manner"
authors = [{ name = "John Robertson", email = "john@myjamjar.com.au" }]
license = { text = "MIT" }
keywords = ["task", "management", "cli", "reusable", "components"]
readme = "README.md"
requires-python = ">=3.14"

dependencies = [
  "click>=8.0",
  "fastapi>=0.136.1",
  "fastmcp>=3.3.0",
  "pydantic>=2.13.4",
  "python-dateutil>=2.8",
]

[dependency-groups]
dev = [
  "flake8>=7.3.0",
  "flake8-annotations>=3.2.0",
  "flake8-bugbear>=25.11.29",
  "flake8-docstrings>=1.7.0",
  "flake8-import-order>=0.19.2",
  "flake8-print>=5.0.0",
  "hypothesis>=6.152.7",
  "pep8-naming>=0.15.1",
  "pydocstyle>=6.3.0",
  "pytest>=9.0.3",
  "ruff>=0.15.13",
]


[project.urls]
Homepage = "https://github.com/Robbo-lab/ipos-open-source-2026S1.git"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
fix = true
unsafe-fixes = true
preview = true
extend-exclude = [""]

[tool.ruff.lint]
select = [
  "RUF", # Ruff-specific rules
  "C90", # mccabe
  "E", # pylint-errors
  "A", # flake8-builtins
  "F", # Pyflakes
  "W", # pylint-warnings
  "B", # flake8-bugbear
  "D", # pydocstyle
  "I", # isort
  "N", # pep8-naming
  "Q", # flake8-quotes
  "DOC", # pydoclint
  "TID", # flake8-tidy-imports
  "PLR", # Refactor
  "FURB", # refurb
  "FAST", # FastAPI
  "COM", # flake8-commas
  "C4", # flake8-comprehensions
  "ICN", # flake8-import-conventions
  "LOG", # flake8-logging-format
  "T20", # flake8-print
  "PT", # flake8-pytest-style
  "UP", # flake8-upgrade
  "RET", # flake8-return
]
preview = true
ignore = [
  "D103", # ignore: docstring rule on every public function (may be too strict for now)
]

[tool.ruff.lint.mccabe]
max-complexity = 7

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.pylint]
max-args = 5
max-branches = 8
max-statements = 25

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true
docstring-code-line-length = "dynamic"
indent-style = "space"
